Add TransactionParser for Frankfurter Sparkasse